--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "test": "jest -c jest.config.js --runInBand",
+    "test": "jest -c jest.config.cjs --runInBand",
     "seed": "tsx src/scripts/seed.ts"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
     "@types/node": "^20.11.30",
     "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.2",
+    "@types/supertest": "^2.0.16",
     "@types/socket.io": "^3.0.2",
     "jest": "^29.7.0",
     "prisma": "latest",
